# fpr-model-calibration

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  MAINTAINERS.md  README.md  RELEASING.md  SECURITY.md  pyproject.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  publish.yml
docs/paper/: .gitignore  Makefile  README.md  main.tex  references.bib
docs/paper/figures/: credit_card_eval_table.tex
docs/paper/scripts/: eval_table.py  method_overview_figure.py  model_comparison.py  plotting_position_error_simulation.py  plotting_position_experiment.py  sample_size_table.py
examples/: calibration_demo.py  credit_card_readme.md  generate_credit_card_roc.py
src/fpr_calibration/: __init__.py
src/fpr_model_calibration/: __init__.py  calibration.py
src/fprcal/: __init__.py  calibration.py
tests/: __init__.py  conftest.py  test_artifact_size.py  test_calibration.py  test_package_metadata.py
