[project]
name = "fprcal"
version = "0.1.0"
description = "Stable low-FPR calibration for detection model scores across model releases."
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Konstantin Berlin", email = "berlink@cisco.com" },
]
keywords = ["calibration", "false-positive-rate", "detector", "security", "ml", "isotonic"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Security",
]
dependencies = [
    "numpy>=2.2",
    "scikit-learn>=1.5",
    "joblib>=1.4",
]

[project.optional-dependencies]
examples = [
    "matplotlib>=3.9",
    "pandas>=2.2",
    "scipy>=1.13",
]
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "ruff>=0.6",
    "ty>=0.0.34",
    "pip-audit>=2.9",
    "licensecheck>=2026.0.8",
    "matplotlib>=3.9",
    "pandas>=2.2",
    "scipy>=1.13",
]

[project.urls]
Homepage = "https://github.com/cisco-ai-defense/fpr-model-calibration"
Repository = "https://github.com/cisco-ai-defense/fpr-model-calibration"
Issues = "https://github.com/cisco-ai-defense/fpr-model-calibration/issues"
Changelog = "https://github.com/cisco-ai-defense/fpr-model-calibration/blob/main/CHANGELOG.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/fprcal"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.coverage.run]
source = ["src/fprcal"]
branch = true

[tool.coverage.report]
show_missing = true
fail_under = 80

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "S",   # flake8-bandit
    "UP",  # pyupgrade
    "N",   # pep8-naming
]
ignore = [
    "E501",  # line length (formatter handles it)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N802", "N803", "S101"]

[tool.licensecheck]
license = "apache"
extras = ["dev", "examples"]
# NumPy's composite metadata includes Zlib, which licensecheck cannot classify.
ignore_licenses = ["zlib"]
show_only_failing = true
zero = true
